2008-01-23  Takeshi Abe  <tabe@fixedpoint.jp>

	* release 0.2.0.

2008-01-22  Takeshi Abe  <tabe@fixedpoint.jp>

	* mm_avcodec.c, mm_avcodec.h, mm_avcodec.types, mm_avcodeclib.stub: new.
	They will serve to provide the skelton of libavdevice; for now solely
	avdevice-version.
	* multimedia/avdevice.scm: ditto.

	* test/test.scm: check avdevice-version.
	* Makefile.in: build mm_avdevice; added -lavdevice to libs.
	* mm_ffmpeg.h: include mm_avdevice.h.
	* multimedia/ffmpeg.scm: extend multimedia.avdevice.
	* doc/reference.scm: described avdevice-version.

2007-12-18  Takeshi Abe  <tabe@fixedpoint.jp>

	* multimedia/ffmpeg.scm (call-with-input-avcodec): changed its semantics;
	escape from current continuation does *not* close codec contexts, like
	call-with-input-file's behavior on the port.

2007-11-10  Takeshi Abe  <tabe@fixedpoint.jp>

	* mm_avcodec.h, mm_avformat.h, mm_ffmpeg.h: include gauche.h
	before other headers possibly concerned with Linux's
	Large File Support.

2007-05-10  Takeshi Abe  <tabe@fixedpoint.jp>

	* test/test.scm (check-file): rewritten with match macro.

2007-05-09  Takeshi Abe  <tabe@fixedpoint.jp>

	* INSTALL: Debian-specific instructions added.

2007-05-08  Takeshi Abe  <tabe@fixedpoint.jp>

	* release 0.1.1.

	* mm_avcodec.h, mm_avcodec.c, mm_ffmpeg.c: introduced 
	mm_avcodec_open and mm_avcodec_close, which are reentrant 
	cousins of avcodec_open and avcodec_close respectively 
	(inspired by gstreamer-ffmpeg).

2007-02-18  Takeshi Abe  <tabe@fixedpoint.jp>

	* Makefile.in (GENERATED): added files generated by "gauche-package 
	compile"

2006-12-20  Takeshi Abe  <tabe@fixedpoint.jp>

	* doc/reference.scm, test/test.scm: added entries for
	avformat-version and avcodec-version.

	* mm_avformatlib.stub, multimedia/avformat.scm: added
	avformat-version.

	* mm_avcodeclib.stub, multimedia/avcodec.scm: added
	avcodec-version.

2006-12-11  Takeshi Abe  <tabe@fixedpoint.jp>

	* doc/reference.scm: mentioned that the following procedures return #f